--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev -- -p 3001",
+    "build": "next build --basePath ",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "help": "next -h"
   },
   "dependencies": {
+    "@module-federation/nextjs-mf": "^6.5.1",
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
@@ -20,6 +22,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "webpack": "^5.86.0",
+    "windowed-observable": "^1.0.0"
   }
 }
